--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-cayman
-title: Ke(Cales) Chen 
+title: Ke(Cales) Chen
+subtitle: Searching for Internship Opportunity
 author: Ke Chen
 source: ""
