--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: casper #jekyll-theme-cayman
+theme: jekyll-theme-cayman
 title: Ke(Cales) Chen
 subtitle: Searching for Internship Opportunity
 author: Ke Chen
